@@ -1,0 +1,18 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderBlock (anonymous) at (0,0) size 784x58
+        RenderText {#text} at (0,0) size 663x18
+          text run at (0,0) width 663: "This tests that when an option is dynamically added to a menu list, and it is too long for the current width,"
+        RenderBR {BR} at (663,14) size 0x0
+        RenderText {#text} at (0,18) size 364x18
+          text run at (0,18) width 364: "that the select automatically recalculates the correct width."
+        RenderBR {BR} at (364,32) size 0x0
+        RenderMenuList {SELECT} at (2,38) size 139x18 [bgcolor=#FFFFFF]
+          RenderBlock (anonymous) at (8,2) size 108x13
+            RenderText at (0,0) size 29x13
+              text run at (0,0) width 29: "Short"
+        RenderText {#text} at (0,0) size 0x0
+      RenderBlock {DIV} at (0,58) size 784x0
